The deckofcards API verification test task - done;

--- a/src/test/resources/properties/default.properties
+++ b/src/test/resources/properties/default.properties
@@ -1,2 +1,11 @@
 loggerProperties = src/test/resources/properties/log4j.properties
-baseUrl = https://deckofcardsapi.com/api/deck/
+baseApiUrl = https://deckofcardsapi.com/api/deck/
+baseImagesUrl = https://deckofcardsapi.com/static/img/
+createPath = new/
+shufflePath = shuffle/
+drawPath = /draw/
+bottomPath = bottom/
+decksCountParam = deck_count
+cardsCountParam = count
+specificCardsParam = cards
+fullDeckVolume = 52
