The deckofcards API verification test task - done;

--- a/src/test/resources/properties/log4j.properties
+++ b/src/test/resources/properties/log4j.properties
@@ -4,13 +4,13 @@ log4j.rootLogger = INFO, FILE, CONSOLE
 # Print log in File
 log4j.appender.FILE=org.apache.log4j.rolling.RollingFileAppender
 log4j.appender.FILE.RollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPolicy
-log4j.appender.FILE.RollingPolicy.FileNamePattern=src/test/resources/logs/%d{yyyy-MM-dd_HH:MM}.log
+log4j.appender.FILE.RollingPolicy.FileNamePattern=src/test/resources/logs/%d{yyyy-MM-dd_HH:mm}.log
 log4j.appender.FILE.Append=false
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:MM:ss.SSS} %-5p%l - %m%n
+log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p%l - %m%n
 
 # This will print log in console
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.Target=System.out
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH:MM:ss.SSS} %-5p%l - %m%n
+log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p%l - %m%n
